welcome.lessons.welcome.array.search.MaxValue.scala.error
maxValue:5: error: not found: value len
      n=len(i)
        ^